<resources>
    <string name="app_name">Донор+</string>
    <string name="go_next">Продовжити</string>
    <string name="input_your_data">Введіть особисті дані для реєстрації</string>
    <string name="name">Ім\'я</string>
    <string name="surname">Прізвище</string>
    <string name="input_your_blood_type">Вкажіть Вашу групу крові:</string>
    <string name="input_your_gender">Вкажіть Вашу стать:</string>
    <string name="input_your_birth_date">Оберіть дату Вашого народження:</string>
    <string name="please_select_where_you_live">Будь ласка, оберіть місце, де Ви проживаєте.</string>
    <string name="you_picked">Ви обрали наступне місце:</string>
    <string name="loading">Завантажуємо…</string>
    <string name="loading_failed">Не вдалося завантажити :(</string>
    <string name="find_donor_center">Знайти донорський центр</string>
    <string name="home_page">Головна</string>
    <string name="centers">Центри</string>
    <string name="checks">Мої донації</string>
    <string name="profile">Профіль</string>
    <string name="to_bookmarks">В закладки</string>
    <string name="take_photo_of_a_receipt">Сфотографувати чек</string>
    <string name="choose_a_photo_from_gallery">Обрати фото з галереї</string>
    <string name="make_a_photo_with_camera">Зробити фото</string>
    <string name="save_a_new_check">Зберегти чек</string>
    <string name="info_for_donor">Пам\'ятка донора крові</string>
    <string name="info_how_to_become_a_donor">Як стати донором крові?</string>
    <string name="info_how_to_become_a_donor_details">
        Донором крові в Україні може бути здорова людина віком від 18 років, вагою від 50 кг (однак, в деяких центрах крові приймають з вагою лише від 55-60 кг, наприклад, у Львівському обласному центрі служби крові). Якщо з віком та кілограмами більш-менш зрозуміло, то яка ж це здорова людина зрозуміти складніше.
\n\n
Отже, здорова людина — це та, яка не має протипоказів до донорства. Іншими словами, якщо ви приймаєте ліки, маєте хронічні захворювання чи стоїте на обліку — донорство крові вам протипоказане чи на постійній основі, чи на тимчасовій.
\n\n
А тепер перейдемо до деталей і ознайомимось які саме є протипокази до донорства. Вони діляться на тимчасові та абсолютні і ми рекомендуємо обов\'язково ознайомитись з ними за посиланнями.
\n\n
Чому ж існує такий величезний список протипоказів і навіщо вони, адже кров все одно перевіряють/тестують в лабораторії перед тим як видати пацієнтам в лікарні. Це все тому, що донорство в першу чергу — це турбота про донора, тобто працює принцип "не нашкодь собі". Адже погодьтесь, якщо людина потребує допомоги чи через підвищену температуру, чи має хронічне захворювання, до прикладу, псоріаз її організм потребує на даний момент відпочинку і лікування, а не навантаження. То ж спочатку турбуємось про себе і свій стан здоров\'я, а вже потім — рятуємо інших.
\n\n
Якщо ви не знайшли протипоказів у списках, значить потенційно ви можете бути донором крові. Та все ж звертаємо увагу, що список — це основа і в ньому є далеко не всі вказані випадки, враховуючи які людина не може стати донором. Тому якщо ви сумніваєтесь і хочете все ж уточнити чи можете ви бути донором, звертайтесь до нас і ми вам підкажемо всі деталі.
\n\n
До прикладу, нас часто питають, чи можу я бути донором, якщо "приймаю протизаплідні таблетки"? Якщо ви приймаєте їх з метою контрацепції, а не лікування — ви можете бути донором. Такі та багато інших питань турбують наших потенційних донорів, тож не соромтесь запитати й ви отримаєте консультацію лікаря он-лайн.
\n\n
Ви дізнались, що можете бути донором крові, що робити далі? Все досить просто, достатньо обрати центр крові чи реципієнта, якому ви хочете допомогти і запланувати кроводачу на зручний для вас день.
    </string>
    <string name="info_dont_do_it">Абсолютні протипоказання щодо донорства крові та її компонентів</string>
    <string name="info_dont_do_it_details">
        Абсолютні протипоказання щодо донорства крові та її компонентів визначені в Додатку 3 до Порядку медичного обстеження донорів крові та (або) її компонентів в розділі 1 - "Абсолютні протипоказання (усунення від донорства незалежно від давності захворювання і результатів лікування)".
\n\n
1.1. Гемотрансмісивні захворювання
\n\n
1.1.1. Інфекційні:
\n\n
СНІД, носійство Віл-інфекції.
Сифіліс вроджений або набутий.
Вірусні гепатити, позитивний результат дослідження на маркери вірусних гепатитів.
Туберкульоз, усі форми.
Бруцельоз, сипний тиф, туляремія, лепра, хвороба Крейтцфельдта-Якоба.
1.1.2. Паразитарні: ехінококоз, токсоплазмоз, трепаносомоз, філяріатоз, ришта, лейшманіоз.
\n\n
1.2. Соматичні захворювання
\n\n
1.2.1. Злоякісні новотвори.
\n\n
1.2.2. Хвороби крові.
\n\n
1.2.3. Органічні захворювання ЦНС.
\n\n
1.2.4. Повна відсутність слуху і (або) мови.
\n\n
1.2.5. Психічні захворювання.
\n\n
1.2.6. Наркоманія, алкоголізм.
\n\n
1.2.7. Серцево-судинні захворювання: гіпертонічна хвороба II - III ст., ішемічна хвороба серця, атеросклероз, атеросклеротичний кардіосклероз, облітеруючий ендоартеріїт, неспецифічний аортоартеріїт, рецидивуючий тромбофлебіт, ендокардит, міокардит, вади серця.
\n\n
1.2.8. Хвороби органів дихання:бронхіальна астма, бронхоектатична хвороба, емфізема легень, обструктивний бронхіт, дифузійний пневмосклероз у стадії декомпенсації.
\n\n
1.2.9. Хвороби органів травлення:ахілічний гастрит, виразкова хвороба шлунка і дванадцятипалої кишки.
\n\n
1.2.10. Захворювання печінки і жовчних шляхів: хронічні захворювання печінки, у тому числі токсичної природи і неясної етіології калькульозний холецистит з повторюваними приступами і явищами холангіту, цироз печінки.
\n\n
1.2.11. Захворювання нирок і сечовивідних шляхів у стадії декомпенсації: дифузні й вогнищеві і ураження нирок, сечокам\'яна хвороба.
\n\n
1.2.12. Дифузні захворювання сполучної тканини.
\n\n
1.2.13. Променева хвороба.
\n\n
1.2.14. Хвороби ендокринної системи у випадку порушення функцій і обміну речовин.
\n\n
1.2.15. Хвороби лор-органів:озена, інші гострі і хронічні важкі гнійно-запальні захворювання.
\n\n
1.2.16. Очні хвороби: залишкові явища увеїту (ірит, іридоцикліт, хоріоретініт), висока міопія (6 Д і більше), трахома, повна сліпота.
\n\n
1.2.17. Шкірні хвороби: розповсюджені захворювання шкіри запального і інфекційного характеру. Псоріаз, еритродермія, екземи, червоний вівчак, пухирчасті дерматози, грибкові поразки шкіри (мікроспорія, трихофітія, фавус, епідермофітія) і внутрішніх органів (глибокі мікози), гнійничкові захворювання шкіри (піодермія, фурункульоз, сікоз).
\n\n
1.2.18. Остеомієліт гострий і хронічний.
\n\n
1.2.19. Оперативні втручання з приводу ампутації або резекції органа і трансплантації органів та тканин.
\n\n
1.3. Форми ризикованої поведінки:
\n\n
- надання сексуальних послуг за плату,
- статеві стосунки з малознайомими особами без презерватива,
- часта зміна статевих партнерів,
- гомосексуальні стосунки,
- наркоманія.
    </string>
    <string name="info_what_to_eat">Як правильно харчуватися перед здачею крові?</string>
    <string name="info_what_to_eat_details">
        Неправильне харчування, що безпосередньо впливає на якість компонентів крові, є також протипоказом до донорства крові. І стосується це не тільки відмови від алкоголю - донор повинен щодня отримувати певну кількість білків, жирів, заліза, мінеральних солей, а також вживати рідину в достатній кількості. Чималу роль відіграє і калорійність раціону. Причому стежити за своїм харчуванням донору необхідно не тільки напередодні процедури донації крові, а й в період між здачею крові та/або її компонентів, тобто постійно.
\n\n
Важливо! Дотримання рекомендацій по харчуванню донора обов\'язкове! Найменші порушення в дієті можуть привести до серйозної зміни якості крові та її компонентів. Пам\'ятайте, що від якості крові, яку ви здаєте залежить і якість наданої хворому допомоги! Результатом порушення донорської дієти може стати не просто зміна аналізу крові (від стандартних, а інколи, незрозумілих для більшості з нас показників), а й життя іншої людини!
\n\n
Що не рекомендують їсти перед здачею крові
Склад раціону та вживання алкоголю чи ліків можуть вплинути на певні показники крові, тому радимо вам відмовитись від нижченаведеного списку продуктів чи препаратів.
\n\n
Копчена, гостра і смажена їжа з численними спеціями - табу як мінімум протягом 48 годин перед процедурою донації.
\n\n
Соління - також заборонені.
\n\n
Молочні продукти, в тому числі і йогурти, сир, вершки, масло, а також яйця. Причина такої заборони проста - вживання навіть невеликої кількості жирів і тваринних білків позначається на складі та якості крові, і заважає її розподілу на компоненти. Крім того, через мікрочастинки жиру сироватка крові стає надто густою, в\'язкою, і набуває каламутного видгляду, що називається хільозом плазми.
\n\n
Горіхи, фініки і банани - заборонені з тієї ж причини.
\n\n
Буряк - рекомендується виключити за 48 годин перед здачею крові.
\n\n
Чорниця - рекомендується виключити за 72 години до забору крові.
\n\n
Ковбасні вироби - сосиски, ковбаса, балик, шинка і так далі.
\n\n
Чіпси, сухарики, халва, насіння, всілякі снеки, а також кетчуп, майонез, інші магазинні соуси і маринади містять безліч шкідливих синтетичних речовин, які допомагають продуктам довгий час зберігати смак, колір і свіжість (якої, до слова, в них бути не може - адже це штучна їжа!).
\n\n
Солодкі магазинні напої - містять шкідливі барвники.
\n\n
Алкоголь, енергетичні напої - про вживання таких рідин донору слід забути назавжди. Але якщо вже ви не змогли відмовити другу в його день народження, утримайтеся від здачі крові в найближчі 48 годин.
\n\n
Лікарські засоби - не вживати протяго останніх 72-х годин.
\n\n
Куріння - ще один ворог здоров\'я не тільки донора, а й пацієнта, який отримує таку кров. У день здачі крові від сигарет доведеться відмовитися. Крім того, дихати тютюновим димом також заборонено (як мінімум, півтори години до процедури).
\n\n
Що рекомендують їсти перед здачею крові
Перелік рекомендованих продуктів набагато меньший та все ж і набагато корисніший для здоров\'я донора.
\n\n
Порція напою - обов\'язково безпосередньо перед процедурою здачі крові з метою запобігання розвитку гіповолемічної реакції організму через різку зміну артеріального тиску. Рекомендується випити воду, солодкий чай, компот із сухофруктів.
\n\n
Легкий сніданок за 2-3 години до здачі крові. В день донації, щоб уникнути непритомності і слабкості, рекомендується перекусити вареними крупами на воді або макаронними виробами без додавання вершкового масла. Також можна їсти хліб, сушку, сухарі (не магазинні снеки!), просте галетное і вівсяне печиво.
\n\n
Пропарена риба і відварене м\'ясо нежирних сортів.
    </string>
    <string name="info_donor_morning">Ранок донора</string>
    <string name="info_donor_morning_details">
        У день дачі крові бажано відпочити, легко поснідати та не планувати на цей день серйозних справ, інтенсивне фізичне навантаження, прийом алкоголю. Не бажано в цей день управляти транспортними засобами через емоційне збудження, яке буває, як правило, у всіх.
\n\n
За 2 години до та 2 години після дачі крові палити небезпечно і для Вас, і для того, кому потрапить Ваша кров.
\n\n
Намагайтесь регулярно і збалансовано харчуватися, вживайте побільше рідини; відмовтесь від вживання алкоголю за 48 годин до процедури; утримайтеся від вживання аспірину, анальгіну і ліків, що містять аспірин і анальгетики, за 72 години до процедури; по можливості, не паліть за годину до процедури; обов\'язково виспіться, відпочиньте.
    </string>
    <string name="info_trombocity">Тромбоцити - процедура кроводачі</string>
    <string name="reg_please">Не бажаєте пройти тестування та стати донором?</string>
    <string name="later">Пізніше</string>
    <string name="OK">ОК</string>
</resources>