<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ScrollView
        android:id="@+id/first_open_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="30dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="30dp"
                android:text="@string/input_your_data"/>
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/first_open_et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:textColorHint="@color/dark_grey"
                android:hint="@string/name"
                android:textColorHighlight="@color/red_light"
                android:textCursorDrawable="@null"
                android:background="@drawable/bg_edit_text"
                android:autofillHints="cc-given-name"
                android:inputType="textPersonName" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/first_open_et_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:textColorHint="@color/dark_grey"
                android:hint="@string/surname"
                android:textColorHighlight="@color/red_light"
                android:textCursorDrawable="@null"
                android:background="@drawable/bg_edit_text"
                android:autofillHints="family-name"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:textSize="15sp"
                android:text="@string/input_your_gender"/>
            <com.google.android.material.chip.ChipGroup
                android:id="@+id/first_open_gender_types_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:chipSpacingVertical="-10dp"
                app:singleSelection="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:textSize="15sp"
                android:text="@string/input_your_blood_type"/>
            <com.google.android.material.chip.ChipGroup
                android:id="@+id/first_open_blood_types_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:chipSpacingVertical="-10dp"
                app:singleSelection="true" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:textSize="15sp"
                android:text="@string/input_your_birth_date"/>
            <DatePicker
                android:id="@+id/first_open_date_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"/>


            <LinearLayout
                android:id="@+id/first_open_submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/bg_btn_submit"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingVertical="15dp"
                android:layout_marginVertical="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:text="@string/go_next"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>