<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".mvp.view.ChooseCityActivity">

    <fragment android:id="@+id/autocomplete_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
        />


    <TextView
        android:id="@+id/choose_city_please_select_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="50dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:text="@string/please_select_where_you_live"/>


    <TextView
        android:id="@+id/choose_city_you_picked_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="50dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:text="@string/you_picked"/>


    <TextView
        android:id="@+id/choose_city_city_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="50dp"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:text=""/>





    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:id="@+id/choose_city_submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/bg_btn_submit"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingVertical="15dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/go_next"/>
    </LinearLayout>
</LinearLayout>